feat(renderer): add DeviceRadix sorting and mesh shader rendering
- integrate configurable GPU radix sorting with an Android Vulkan-safe path
- add mesh shader geometry generation with vertex shader fallback
- add screen-size culling and visible splat statistics
- improve Android packaging, permission handling, and Gradle recovery